--- a/www/index.html
+++ b/www/index.html
@@ -10,10 +10,10 @@
 
     <!-- Angulat Chart -->
     <link href="//raw.githubusercontent.com/jtblin/angular-chart.js/master/dist/angular-chart.css" rel="stylesheet">
-    <!-- <script src="js/chart.js/Chart.min.js"></script> -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="https://rawgit.com/nnnick/Chart.js/master/Chart.min.js"></script>
+    <script src="js/chart.js/Chart.min.js"></script>
+    <!-- <script src="https://rawgit.com/nnnick/Chart.js/master/Chart.min.js"></script> -->
     <script src="https://rawgit.com/jtblin/angular-chart.js/master/dist/angular-chart.min.js"></script>
 
 
@@ -78,12 +78,13 @@
           </div>
         </div>
 
-        <div class="list">
-          Sensor 1
+        <div class="list" id="chartsContainer">
+          Telemetría
           <canvas id="sensor1Chart"  class="chart chart-line" data="graph.data" labels="graph.labels"
             series='graph.series' height="100"></canvas>
         </div>
 
+        <!-- 
         <div class="list">
           Sensor 2
           <canvas id="sensor2Chart"  class="chart chart-line" data="graph.data" labels="graph.labels"
@@ -93,6 +94,7 @@
         Sensor 3
         <canvas id="sensor3Chart"  class="chart chart-line" data="graph.data" labels="graph.labels"
           series='graph.series' height="100"></canvas>
+        -->
 
       </ion-content>
     </ion-pane>
